feat: add 3 avatars and update the backend to handle them

--- a/public/mainpage/blocked.html
+++ b/public/mainpage/blocked.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8" />
   <title>FocusFalcon | Focus Zone</title>
@@ -9,9 +10,9 @@
 <body>
   <div class="blocked-wrapper">
     <div class="blocked-card">
-      <div class="falcon-icon">🦅</div>
-      <h1>Stay Focused</h1>
-      
+      <img id="avatarImage" class="avatar-icon" />
+      <h1 id="avatarTitle">Stay Focused</h1>
+
       <div class="info-box">
         <p id="blockedSite" class="blocked-site"></p>
         <div class="divider"></div>
@@ -24,4 +25,5 @@
 
   <script type="module" src="blocked.js"></script>
 </body>
+
 </html>
