--- a/public/settings/setting.html
+++ b/public/settings/setting.html
@@ -10,7 +10,7 @@
 <body>
   <div class="settings-container">
     <header>
-      <h1>🦅 FocusFalcon Settings</h1>
+      <h1>FocusFalcon Settings</h1>
       <p>Configure your focus sanctuary</p>
     </header>
 
@@ -59,6 +59,36 @@
           </div>
         </div>
       </section>
+
+      <hr class="divider">
+
+      <section class="settings-section">
+        <label class="section-title">Focus Guardian</label>
+        <p class="section-desc">
+          Choose who keeps you in the focus zone
+        </p>
+
+        <div class="avatar-picker">
+          <label class="avatar-option">
+            <input type="radio" name="avatar" value="falcon" />
+            <img src="/icons/avatar-falcon.png" alt="Falcon" class="avatar-preview" />
+            <span>Falcon</span>
+          </label>
+
+          <label class="avatar-option">
+            <input type="radio" name="avatar" value="capybara" />
+            <img src="/icons/avatar-capybara.png" alt="Capybara" class="avatar-preview" />
+            <span>Capybara</span>
+          </label>
+
+          <label class="avatar-option">
+            <input type="radio" name="avatar" value="redPanda" />
+            <img src="/icons/avatar-red-panda.png" alt="Red Panda" class="avatar-preview" />
+            <span>Red Panda</span>
+          </label>
+        </div>
+      </section>
+
 
       <button id="saveSettings" class="save-btn">Save Configurations</button>
     </div>
