feat: add donation message with ccs

--- a/public/mainpage/blocked.html
+++ b/public/mainpage/blocked.html
@@ -20,6 +20,10 @@
       </div>
 
       <p class="encouragement">"The secret of getting ahead is getting started."</p>
+      <p class="donation-note">
+        FocusFalcon is free to use, and if it’s made a difference for you, please consider supporting ongoing development with a
+        <a href="https://paypal.me/indiejourneys" target="_blank" rel="noopener">donation</a>.
+      </p>
     </div>
   </div>
 
