--- a/public/settings/setting.html
+++ b/public/settings/setting.html
@@ -91,6 +91,10 @@
 
 
       <button id="saveSettings" class="save-btn">Save Configurations</button>
+      <p class="donation-note">
+        FocusFalcon is free to use, and if it’s made a difference for you, please consider supporting ongoing development with a
+        <a href="https://paypal.me/indiejourneys" target="_blank" rel="noopener">donation</a>.
+      </p>
     </div>
   </div>
   <script type="module" src="setting.js"></script>
