fix: fix firefox ui bug on setting page

--- a/public/settings/setting.html
+++ b/public/settings/setting.html
@@ -70,7 +70,7 @@
 
         <div class="avatar-picker">
           <label class="avatar-option">
-            <input type="radio" name="avatar" value="falcon" />
+            <input type="radio" name="avatar" value="falcon" checked />
             <img src="/icons/avatar-falcon.png" alt="Falcon" class="avatar-preview" />
             <span>Falcon</span>
           </label>
