--- a/public/settings/setting.html
+++ b/public/settings/setting.html
@@ -92,8 +92,13 @@
 
       <button id="saveSettings" class="save-btn">Save Configurations</button>
       <p class="donation-note">
-        FocusFalcon is free to use, and if it’s made a difference for you, please consider supporting ongoing development with a
+        FocusFalcon is free to use, and if it’s made a difference for you, please consider supporting ongoing
+        development with a
         <a href="https://paypal.me/indiejourneys" target="_blank" rel="noopener">donation</a>.
+      </p>
+
+      <p class="privacy-note">
+        By using FocusFalcon, you agree to our <a href="privacy.html" target="_blank">Privacy Policy</a>.
       </p>
     </div>
   </div>
